@startuml Paquete - Horarios y Asignaciones

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Paquete: Horarios y Asignaciones

' ============================================
' CLASES DEL PAQUETE
' ============================================

class HorarioClase {
  +idHorarioClase: int
  +idGradoSeccion: int
  +idDocente: int
  +materia: string
  +diaSemana: int
  +horaInicio: DateTime
  +horaFin: DateTime
  +aula: string
  +activo: boolean
  +sesiones: int
  +tipoActividad: TipoActividadEnum
  +toleranciaMin: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear(): HorarioClase
  +actualizar(): void
  +eliminar(): void
  +activar(): void
  +desactivar(): void
  +verificarConflicto(horario: HorarioClase): boolean
  +obtenerAsistencias(fecha: DateTime): Asistencia[]
  +estaEnHorario(hora: DateTime): boolean
}

class TipoAsignacion {
  +idTipoAsignacion: int
  +nombre: string
  --
  +crear(): TipoAsignacion
  +actualizar(): void
  +eliminar(): void
  +listarTodos(): TipoAsignacion[]
}

class DocenteAula {
  +idDocenteAula: int
  +idDocente: int
  +idGradoSeccion: int
  +idTipoAsignacion: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +asignar(): void
  +actualizar(): void
  +remover(): void
  +verificarAsignacion(): boolean
}

enum TipoActividadEnum {
  CLASE_REGULAR
  REFORZAMIENTO
  RECUPERACION
  EVALUACION
}

' ============================================
' RELACIONES DEL PAQUETE
' ============================================

' Dependencia: HorarioClase usa TipoActividadEnum
HorarioClase ..> TipoActividadEnum

' Asociación: DocenteAula clasificado por TipoAsignacion
TipoAsignacion -- DocenteAula

note right of HorarioClase
  **HorarioClase**
  Define los horarios de clases
  para cada grado-sección,
  incluyendo materia, docente,
  día, hora y aula.
  
  **Atributos clave:**
  - diaSemana: 1-7 (Lun-Dom)
  - toleranciaMin: minutos de tolerancia
  - tipoActividad: tipo de clase
end note

note left of DocenteAula
  **DocenteAula**
  Clase asociativa que vincula
  docentes con aulas (GradoSeccion)
  y especifica el tipo de asignación
  (tutor, auxiliar, etc.)
end note

note bottom of TipoActividadEnum
  **Tipos de Actividad:**
  - CLASE_REGULAR: Clase normal
  - REFORZAMIENTO: Clase de apoyo
  - RECUPERACION: Clase de recuperación
  - EVALUACION: Evaluación o examen
end note

@enduml
